--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="다정의 프로필 링크" />
-        <meta property="og:description" content="놀러오세🙋🏻‍♀️" />
+        <meta property="og:description" content="놀러오세요❤️" />
         <meta property="og:image" content="2.jpg" />
         <title>다짱의 프로필</title>
         <style>
